fix button text

--- a/front/src/app/menu/navigation/navigation.component.html
+++ b/front/src/app/menu/navigation/navigation.component.html
@@ -10,7 +10,7 @@
         <li class="nav-item">
             <a class="nav-link d-flex align-items-center" routerLink="/search" routerLinkActive="active">
                 <fa-icon icon="search" class="me-3 nav-icon"></fa-icon>
-                <div>Home</div>
+                <div>Search</div>
             </a>
         </li>
     </ul>
