add play to song

--- a/front/src/app/home/song/song.component.html
+++ b/front/src/app/home/song/song.component.html
@@ -1,4 +1,4 @@
-<div (mouseover)="hover(true)" (mouseleave)="hover(false)">
+<div (click)="play()" (mouseover)="hover(true)" (mouseleave)="hover(false)">
     <div class="card-body">
         <img class="card-img-top card-img-bottom" [src]="'data:'+display.coverContentType+';base64,'+display.cover" alt="cover">
         <h5 class="title mt-3">{{display.title?.value}}</h5>
