--- a/front/src/app/player/player.component.html
+++ b/front/src/app/player/player.component.html
@@ -1,7 +1,7 @@
 <div class="d-flex justify-content-between align-items-center player bg-black">
     <div class="song-played d-flex align-items-center">
         @if (current) {
-        <small-song-card [song]="current"></small-song-card>
+        <list-song-card [song]="current"></list-song-card>
         }
     </div>
     <div class="d-flex justify-content-center align-items-center">
