add playlist to home

--- a/front/src/app/home/home.component.html
+++ b/front/src/app/home/home.component.html
@@ -1,3 +1,6 @@
+<h1 class="mb-3">Playlist</h1>
+<favorite-song-card></favorite-song-card>
+
 <h1 class="mb-3 mt-3">Hello !</h1>
 @if (loading) {
     <div class="d-flex justify-content-center align-items-center">
