--- a/front/src/app/add-song/add-song.component.html
+++ b/front/src/app/add-song/add-song.component.html
@@ -30,14 +30,21 @@
                     placeholder="cover" formControlName="cover"  accept=".jpg,.jpeg,.png,.svg" (change)="uploadCover($event.target)"/>
             </div>
             <div class="form-Floating mb-3 text-secondary file">
-                <label for="cover">File</label>
+                <label for="file">File</label>
                 <input type="file" class="form-control" id="file" [class.is-valid]="createForm.get('file')?.valid"
-                    placeholder="file" formControlName="file"  accept=".wav,.mp3" (change)="uploadFile($event.target)"/>
+                    placeholder="file" formControlName="file"  accept=".wav,.mp3,.mpeg" (change)="uploadFile($event.target)"/>
             </div>
-            <div class="d-grid">
+            <div class="d-grid d-flex justify-content-between">
+                <label class="btn btn-secondary" for="file">
+                    <fa-icon class="me-2" [icon]="['fas','upload']"></fa-icon>
+                    Import
+                </label>
                 <button class="btn btn-primary" [disabled]="createForm.invalid || creating" type="submit">
                     @if(!creating){
-                        <div>Add</div>
+                        <div class="d-flex justify-content-center">
+                            <fa-icon class="me-2" icon="add"></fa-icon>
+                            <div>Add</div>
+                        </div>
                     } @else {
                         <div class="d-flex align-items-center justify-content-center">
                             <fa-icon icon="circle-notch" class="me-2" animation="spin"></fa-icon>
